refactors CoffeeSiteSearchController to improve city name encoding and updates search logic in CSStarsCommentsController